-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: None
-
Component/s: core-libs
-
b158
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8175618 | 10 | Xueming Shen | P2 | Resolved | Fixed | b02 |
| JDK-8197064 | 8u192 | Xueming Shen | P2 | Resolved | Fixed | b01 |
| JDK-8195303 | 8u172 | Xueming Shen | P2 | Resolved | Fixed | b03 |
| JDK-8184386 | 8u162 | Xueming Shen | P2 | Resolved | Fixed | b01 |
| JDK-8183437 | 8u161 | Xueming Shen | P2 | Resolved | Fixed | b01 |
| JDK-8182920 | 8u152 | Xueming Shen | P2 | Resolved | Fixed | b06 |
| JDK-8177138 | 8u151 | Sean Coffey | P2 | Resolved | Fixed | b01 |
| JDK-8178052 | 8u141 | Sean Coffey | P2 | Closed | Not an Issue | |
| JDK-8192267 | emb-8u161 | Xueming Shen | P2 | Resolved | Fixed | b01 |
| JDK-8184510 | emb-8u151 | Unassigned | P2 | Resolved | Fixed | b01 |
| JDK-8178581 | emb-8u141 | Unassigned | P2 | Resolved | Fixed | b03 |
install/make/windows/defs/Unzip.gmk
in which it also set the path point to the zlib
--------------------------
These Mach 5 builds failed in install where they try to use Unzip.lib
Have the zlib changes (see below) been used to do full (closed) product builds on Windows?
http://java.se.oracle.com/mach5//view/All/job/9-dev/1999/artifact/logs/windows-x64.log
------------------------
- backported by
-
JDK-8175618 Mach 5 builds failed on Windows/install repo after JDK-8173207
-
- Resolved
-
-
JDK-8177138 Mach 5 builds failed on Windows/install repo after JDK-8173207
-
- Resolved
-
-
JDK-8178581 Mach 5 builds failed on Windows/install repo after JDK-8173207
-
- Resolved
-
-
JDK-8182920 Mach 5 builds failed on Windows/install repo after JDK-8173207
-
- Resolved
-
-
JDK-8183437 Mach 5 builds failed on Windows/install repo after JDK-8173207
-
- Resolved
-
-
JDK-8184386 Mach 5 builds failed on Windows/install repo after JDK-8173207
-
- Resolved
-
-
JDK-8184510 Mach 5 builds failed on Windows/install repo after JDK-8173207
-
- Resolved
-
-
JDK-8192267 Mach 5 builds failed on Windows/install repo after JDK-8173207
-
- Resolved
-
-
JDK-8195303 Mach 5 builds failed on Windows/install repo after JDK-8173207
-
- Resolved
-
-
JDK-8197064 Mach 5 builds failed on Windows/install repo after JDK-8173207
-
- Resolved
-
-
JDK-8178052 Mach 5 builds failed on Windows/install repo after JDK-8173207
-
- Closed
-