8175053: March 5 builds failed on Windows/install repo after JDK-8173207

Reviewed-by: mchung